--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+
 /* ===== */
 /* ROOT */
 /* ===== */
@@ -69,41 +70,41 @@ a {
 }
 
 
-
-
-/* ==== */
-/* info */
-/* ==== */
-
-.info {
-    padding-top: 68px;
-    padding-bottom: 68px;
-}
-
-.info-container {
+/* ========= */
+/* UNIVERSAL */
+/* ========= */
+.universal-container {
     display: flex;
-    gap: 20px;
     align-items: center;
     justify-content: space-between;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+.universal-logo {
+    width: 64px;
+    height: 64px;
 }
 
-.info-content {
-    max-width: 540px;
+/* ==== */
+/* hero */
+/* ==== */
+
+.hero {
+    padding-top: 26px;
+    padding-bottom: 40px;
+}
+.hero-container {
+    text-align: center;
+    max-width: 792px;
 }
 
-.info-img {
-    width: 445px;
-    height: 445px;
-}
-
-.info-title {
+.hero-title {
+    margin-bottom: 23px;
+    font-size: var(--fl);
     color: var(--black);
-    font-size: var(--fm);
-    margin-bottom: 34px;
 }
-
-.info-text {
-    margin-bottom: 32px;
+.hero-text {
+    color: var(--gray);
 }
 
 /* ========= */
